# gamera-4

./: .gitignore  .travis.yml  ACKNOWLEDGEMENTS  CHANGES  CMakeLists.txt  INSTALL  KNOWN_BUGS  MANIFEST.in  README.md  TODO  WINDOWS_INSTALL  gamera_gui  gamera_post_install.py  log.txt  mingw32_cross_compile.py  pyproject.toml  setup.cfg  setup.py  version
.github/workflows/: ci.yml
doc/html/: analysis.html  args.html  binarization.html  classes.html  classification.html  classify.html  color.html  combine.html  conversion.html  corelation.html  deformations.html  dimension_types.html  directory_heirarchy.html  directory_hierarchy.html  displaying.html  draw.html  edge.html  externallibraries.html  features.html  file.html  filter.html  ga_optimization.html  gamera.core.ImageData.html  gamera.core.ImageInfo.html  gamera.core.RGBPixel.html  geometry.html  graph.html  gui.html  image_api.html  image_types.html  index.html  install.html  kdtree.html  list.html  major_changes_3x.html  matplotlib_support.html  migration_guide.html  morphology.html  overriding_knn_features.html  overview.html  (+17 more)
doc/src/: analysis.txt  binarization.txt  classes.txt  classification.txt  color.txt  combine.txt  conversion.txt  corelation.txt  deformations.txt  directory_hierarchy.txt  displaying.txt  draw.txt  edge.txt  externallibraries.txt  features.txt  file.txt  filter.txt  gamera.core.ImageData.txt  gamera.core.ImageInfo.txt  gamera.core.RGBPixel.txt  geometry.txt  graph.txt  index.txt  install.txt  kdtree.txt  list.txt  morphology.txt  pagesegmentation.txt  plugins.txt  plugins_custom_types.txt  relational.txt  runlength.txt  segmentation.txt  thinning.txt  transformation.txt  unit_testing.txt  utility.txt  writing_toolkits.txt  xml.txt
gamera/: __init__.py  args.py  args_wrappers.py  classifier_stats.py  classify.py  cluster.py  confidence.py  config.py  core.py  fudge.py  gamera_gui.py  gamera_setup.py  gamera_xml.py  gendoc.py  generate.py  graph_util.py  group.py  io.py  knn.py  knn_editing.py  paths.py  plugin.py  process.py  pstat.py  pyplate.py  roman_text.py  ruleengine.py  stats.py  symbol_table.py  toolkit.py  util.py
gamera/backport/: ConfigParser.py  config.py  dircache.py  optparse.py  sets.py  textwrap.py
gamera/gui/: args_gui.py  classifier_display.py  compat_wx.py  gamera_display.py  gamera_icons.py  gui.py  gui_util.py  has_gui.py  icon_display.py  image_browser.py  image_menu.py  knn_editing_display.py  matplotlib_support.py  rule_engine_runner.py  toolbar.py  var_name.py
gamera/mac/: buildpkg.py  gamera_mac_setup.py
gamera/pixmaps/: img2img.py  img2py.py
gamera/plugins/: _arithmetic.cpp  _binarization.cpp  _color.cpp  _contour.cpp  _convolution.cpp  _corelation.cpp  _deformation.cpp  _draw.cpp  _edgedetect.cpp  _features.cpp  _fourier_features.cpp  _geometry.cpp  _gui_support.cpp  _image_conversion.cpp  _image_utilities.cpp  _listutilities.cpp  _logical.cpp  _misc_filters.cpp  _misc_free_functions.cpp  _morphology.cpp  _pagesegmentation.cpp  _png_support.cpp  _projections.cpp  _runlength.cpp  _segmentation.cpp  _string_io.cpp  _structural.cpp  _thinning.cpp  _threshold.cpp  _tiff_support.cpp  _transformation.cpp  binarization.py  contour.py  convolution.py  deformation.py  draw.py  edgedetect.py  features.py  fourier_features.py  geometry.py  (+16 more)
include/: connected_components.hpp  dimensions.hpp  floatpoint.hpp  gameramodule.hpp  image_data.hpp  image_view.hpp  knnga.hpp  knnmodule.hpp  python_iterator.hpp  rle_data.hpp  utility.hpp
include/graph/: edge.hpp  edgenodeiterator.hpp  graph.hpp  graphdata.hpp  graphdatapyobject.hpp  node.hpp  nodetraverseiterator.hpp  shortest_path.hpp  spanning_tree.hpp
include/plugins/: arithmetic.hpp  color.hpp  contour.hpp  convolution.hpp  deformations.hpp  draw.hpp  edgedetect.hpp  fourier_features.hpp  geometry.hpp  gui_support.hpp  image_utilities.hpp  listutilities.hpp  logical.hpp  misc_filters.hpp  misc_free_functions.hpp  pagesegmentation.hpp  png_support.hpp  projections.hpp  runlength.hpp  string_io.hpp  structural.hpp  thinning.hpp  tiff_support.hpp  transformation.hpp
include/vigra/: README  error.hxx  functortraits.hxx  static_assert.hxx  tinyvector.hxx
migration_tools/: gamera_deprecation_filter  generate_migration_docs
misc/: daily_build.py
src/: CMakeLists.txt
src/gameracore/: CMakeLists.txt  dimobject.cpp  floatpointobject.cpp  gameramodule.cpp  imagedataobject.cpp  imageinfoobject.cpp  imageobject.cpp  iteratorobject.cpp  pointobject.cpp  rectobject.cpp  regionmapobject.cpp  regionobject.cpp  rgbpixelobject.cpp  sizeobject.cpp
src/geostructs/: CMakeLists.txt  delaunaytree.cpp  kdtree.cpp  kdtreemodule.cpp
src/graph/: CMakeLists.txt  bfsdfsiterator.cpp  graph_algorithm.cpp  graph_colorize.cpp  graph_flags.cpp  graph_structure.cpp  node.cpp  spanning_tree.cpp
src/graph/graphmodule/: edgeobject.cpp  graphmodule.cpp  graphobject.cpp  graphobject.hpp  graphobject_algorithm.cpp  graphobject_algorithm.hpp  iteratorobject.hpp  nodeobject.cpp  partitions.cpp  wrapper.hpp
src/knncore/: CMakeLists.txt  knncoremodule.cpp
src/knnga/: CMakeLists.txt  knnga.cpp  knngamodule.cpp
src/libtiff/: CMakeLists.txt  mkg3states.cpp  port.h  t4.h  tif_aux.cpp  tif_close.cpp  tif_codec.cpp  tif_color.cpp  tif_compress.cpp  tif_config.h  tif_dir.cpp  tif_dir.h  tif_dirinfo.cpp  tif_dirread.cpp  tif_dirwrite.cpp  tif_dumpmode.cpp  tif_error.cpp  tif_extension.cpp  tif_fax3.cpp  tif_fax3.h  tif_fax3sm.cpp  tif_flush.cpp  tif_getimage.cpp  tif_jbig.cpp  tif_jpeg.cpp  tif_jpeg_12.cpp  tif_luv.cpp  tif_lzma.cpp  tif_lzw.cpp  tif_next.cpp  tif_ojpeg.cpp  tif_open.cpp  tif_packbits.cpp  tif_pixarlog.cpp  tif_predict.cpp  tif_predict.h  tif_print.cpp  tif_read.cpp  tif_stream.cxx  tif_strip.cpp  (+14 more)
tests/: README  test_classifier.py  test_color.py  test_features.py  test_floatpoint.py  test_graph.py  test_graph_colorize.py  test_image.py  test_image_info.py  test_kdtree.py  test_load_image.py  test_mlcc.py  test_nested_list.py  test_plugins.py  test_rect.py  test_rle.py  test_save_image.py  test_voronoi.py  test_xml.py
(+60 files in other folders)
